# ChangeLog for dev-java/ant-owanttask
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-owanttask/ChangeLog,v 1.26 2007/05/24 13:35:21 flameeyes Exp $

  24 May 2007; Diego Pettenò <flameeyes@gentoo.org>
  ant-owanttask-1.1-r12.ebuild:
  Add ~x86-fbsd keyword, as per bug #170603.

  12 May 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  -ant-owanttask-1.1-r11.ebuild, ant-owanttask-1.1-r12.ebuild:
  Stable on amd64, bug #176856. Removed older version in same slot.

  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  ant-owanttask-1.1-r12.ebuild:
  ppc stable

  05 May 2007; Andrej Kacian <ticho@gentoo.org> ant-owanttask-1.1-r12:
	Stable on x86, bug #176856.

  20 Apr 2007; Petteri Räty <betelgeuse@gentoo.org>
  ant-owanttask-1.1-r12.ebuild:
  Add dev-java/xalan to DEPEND.

  11 Feb 2007; Vlastimil Babka <caster@gentoo.org>
  -ant-owanttask-1.1-r1.ebuild:
  Cleanup.

  10 Feb 2007; nixnut <nixnut@gentoo.org> ant-owanttask-1.1-r11.ebuild:
  Stable on ppc wrt bug 163639

  08 Feb 2007; Vlastimil Babka <caster@gentoo.org>
  ant-owanttask-1.1-r11.ebuild:
  Block on >=ant-core-1.7.0. If you have it unmasked, you must also unmask
  ant-owanttask-1.1-r12.

  03 Feb 2007; Steve Dibb <beandog@gentoo.org> ant-owanttask-1.1-r11.ebuild:
  amd64 stable, bug 163639

  30 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  ant-owanttask-1.1-r11.ebuild, ant-owanttask-1.1-r12.ebuild:
  Put java-ant-2 after java-pkg-2 in inherit.

  25 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  ant-owanttask-1.1-r11.ebuild:
  stable x86; bug #163639

*ant-owanttask-1.1-r12 (24 Jan 2007)

  24 Jan 2007; Vlastimil Babka <caster@gentoo.org> +files/MultipleCopy.java,
  +ant-owanttask-1.1-r12.ebuild:
  Revbump to be somewhat compatible with ant-1.7.0. The incompatible
  MultipleCopy task is replaced with a dummy. No asm ebuild (the only package
  using this in the tree) excercises this task.
