@@ -1,6 +1,6 @@
 AUX MultipleCopy.java 295 RMD160 f467af55764b4d43337bf382ff5dd5ff443950c3 SHA1 c10ce2fa34d45b0eaf966d13fa0f59068b25ef8a SHA256 81589be71d092b5e56d6e27f917d374c8e1ae684961792dc9ae063052b4d3352
 AUX ant-owanttask-1.1-classpath.patch 745 RMD160 10dba27b50313240154369cebb7565c97748dd1f SHA1 ba210d663cb053142bd1075156a68612d4c69aea SHA256 44ceda113479ea7a2d7e3b1ac1dac51d74a30af19390d8d27fa1dbed774ab081
 DIST owanttask-1.1-gentoo.tar.bz2 9275 RMD160 156f8b6bae7628f64c73d5388a24b558ae77243c SHA1 4cd043960871193436e63f41d9228fdd38068bf0 SHA256 b1cfae92078383eb2aadde9fbfdf5a01ca390fb2719c169375c9325014603e82
-EBUILD ant-owanttask-1.1-r12.ebuild 1152 RMD160 ddad095ec98719f56e5843aa937a950b97dd56cf SHA1 e37400c92a92d6c7350b5ac647417da6222f4a89 SHA256 ce09c1d4beeea630e43b511e9f0df319618338202fd834ddc7f41dbc1ac8e55f
-MISC ChangeLog 3240 RMD160 2635944c4069c6c417dbc7630b4e15a79639c8bd SHA1 c98c37a4cd841a4ce7916fa45bd8434aa03d6462 SHA256 27eed41219897fe209a16a99bf6e99cb05d1f98faae21fd6fae644a9cc58d2bc
+EBUILD ant-owanttask-1.1-r12.ebuild 1161 RMD160 5f872df58bb41eb06d21a3f362ae8bfe691709f1 SHA1 2637f18d31da4977b6df4f0fba9fbccf85e0d3d4 SHA256 b3a6c450c4d4be244a53be534c71f3b485adcdacdfdc9086d49463a0410f3ed3
+MISC ChangeLog 3369 RMD160 c5717705e55a79b8aefbf28b18d976703b60b2e9 SHA1 b27cd6b188fdfba4f3819199d58c06e3bb87211c SHA256 6fd8de2c7bc91e4cac824d6f346711bc7bc3c8302cb7f7f7f1e05a1a58c92252
 MISC metadata.xml 158 RMD160 d71171daf5fa0ea076b61129327d757cc9c75225 SHA1 b9baf1a1cb9a7070400cd44b2f9b35d59b9c17a1 SHA256 6f42ac97aed8ab989921aa4a0f8c45b167af3c6dc25811326d7f6cf1ccb9d189
